# ragbase

./: .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE  README.md  drizzle.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tasks.json  tsconfig.test.json  vitest.config.ts
electron/: main.ts  preload.ts  tsconfig.json
public/: icon.icns
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: commands.rs  main.rs  process.rs
src/app/: globals.css  layout.tsx  page.tsx  tasks.ts
src/app/chat/: page.tsx
src/app/kb/: page.tsx
src/app/settings/: page.tsx
src/app/tasks/: process.ts  sync.ts
src/components/settings/: embedding-list.tsx  embedding-modal.tsx  knowledge-settings.tsx  model-list.tsx  model-modal.tsx
src/components/ui/: button.tsx  confirm-dialog.tsx  file-card.tsx  file-icon.tsx  file-opener.tsx  file-status.tsx  kb-modal.tsx  language-switcher.tsx  loading-dots.tsx  markdown-renderer.tsx  menu.tsx  message-bubble.tsx  modal.tsx  search-input-card.tsx  switch.tsx  sync-dir-delete-dialog.tsx  think-card.tsx  tooltip.tsx  window-controls.tsx
src/db/: index.ts  migrate.ts  schema.ts  system-settings.ts
src/db/drizzle/: 0000_nasty_cardiac.sql  0001_marvelous_vector.sql  0002_premium_sleeper.sql  0003_long_zuras.sql  0010_jazzy_devos.sql  (+7 more)
src/hooks/: usePlatform.ts
src/i18n/: config.ts  hooks.ts  utils.ts
src/lib/: constants.ts  server-i18n.ts  utils.ts
src/llm/: index.ts  lancedb.ts
src/types/: electron.d.ts  pdf-parse.d.ts  tauri.d.ts
(+54 files in other folders)
