[package]
name = "RAGBASE"
version = "0.1.0"
edition = "2024"

[package.metadata.tauri]
identifier = "app.ragbase.desktop"

[package.metadata.tauri.bundle]
active = true
targets = ["dmg", "app"]
category = "public.app-category.productivity"

[package.metadata.tauri.bundle.macos]
minimum-system-version = "10.15"
frameworks = []

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
ctrlc = "3.4"
libc = "0.2"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-opener = "2.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
